--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@ffmpeg/core": "^0.11.0",
-		"@ffmpeg/ffmpeg": "^0.11.6"
+		"@ffmpeg/core": "^0.11.0"
 	}
 }
